crates/cuda-macros/tests/compile_fail/cuda_program_arg_count.stderr
error: cuda_program operation `fill` passes 1 arguments, but the kernel takes 2
  --> tests/compile_fail/cuda_program_arg_count.rs:20:9
   |
20 |         fill(output).grid_len(n);
   |         ^^^^^^^^^^^^
